--- a/trialapp/Views/Home/Index.cshtml
+++ b/trialapp/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "Login";
 }
 @{
@@ -10,17 +12,17 @@
 </div>
 
 <div class="container">
-    <form asp-controller="UsersC" asp-action="Login" method="post">
+    <form asp-controller="Login" asp-action="Login" method="post">
         <div asp-validation-summary="All" class="text-danger"></div>
 
         <div class="form-group">
-            <label for="Email"></label>
-            <input for="Email" class="form-control" name="email"/>
+            <label for="Email">Email:</label>
+            <input for="Email" class="form-control" id="email" name="email"/>
         </div>
 
         <div class="form-group">
-            <label for="Password"></label>
-            <input for="Password" type="password" class="form-control" name="password" />
+            <label for="Password">Password:</label>
+            <input for="Password" type="password" id="password" name="password" class="form-control" />
         </div>
 
         <div class="form-group">
