--- a/trialapp/Views/Profile/Index.cshtml
+++ b/trialapp/Views/Profile/Index.cshtml
@@ -20,13 +20,13 @@
 
     <div class="form-group">
         <label for="UserHeight">User Height</label>
-        <input type="number" id="UserHeight" name="UserHeight" class="form-control" value="@Model.UserHeight" />
+        <input type="decimal" id="UserHeight" name="UserHeight" class="form-control" value="@Model.UserHeight" />
         <span asp-validation-for="UserHeight" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="UserWeight">User Weight</label>
-        <input type="number" id="UserWeight" name="UserWeight" class="form-control" value="@Model.UserWeight" />
+        <input type="decimal" id="UserWeight" name="UserWeight" class="form-control" value="@Model.UserWeight" />
         <span asp-validation-for="UserWeight" class="text-danger"></span>
     </div>
 
