--- a/trialapp/Views/Shared/_Layout.cshtml
+++ b/trialapp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ActivityRecord" asp-action="Index">Activity</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/swagger">API Endpoint</a>
+                        </li>
                     </ul>
                 </div>
             </div>
